--- a/.gitattributes
+++ b/.gitattributes
@@ -34,6 +34,7 @@
 #*.modelproj merge=binary
 #*.sqlproj   merge=binary
 #*.wwaproj   merge=binary
+*.sql merge=binary
 
 ###############################################################################
 # behavior for image files
@@ -43,6 +44,7 @@
 #*.jpg   binary
 #*.png   binary
 #*.gif   binary
+*.sql binary
 
 ###############################################################################
 # diff behavior for common document formats
