--- a/ExtApp/ExtApp.Web/Web.config
+++ b/ExtApp/ExtApp.Web/Web.config
@@ -19,7 +19,7 @@
       <property name="connection.connection_string">Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ExtApp.mdf;Integrated Security=True;Connect Timeout=30</property>
       <property name="show_sql">true</property>
       <property name="hbm2ddl.auto">update</property>
-      <mapping assembly="ExtApp.DAL" />
+      <mapping assembly="ExtApp.Model" />
     </session-factory>
   </hibernate-configuration>
 
