--- a/ExtApp/ExtApp.Model/ExtApp.Model.csproj
+++ b/ExtApp/ExtApp.Model/ExtApp.Model.csproj
@@ -56,25 +56,25 @@
     <Compile Include="LoginResult.cs" />
     <Compile Include="ListResult.cs" />
     <Compile Include="Result.cs" />
-    <Compile Include="Sys\AppMenu.cs" />
-    <Compile Include="Sys\ConfigSection.cs" />
-    <Compile Include="Sys\Config.cs" />
-    <Compile Include="Sys\DeptRoleMenu.cs" />
-    <Compile Include="Sys\Dept.cs" />
-    <Compile Include="Sys\DicItem.cs" />
-    <Compile Include="Sys\DicType.cs" />
-    <Compile Include="Sys\Dic.cs" />
-    <Compile Include="Sys\Log.cs" />
-    <Compile Include="Sys\LoginSession.cs" />
-    <Compile Include="Sys\LogLevel.cs" />
-    <Compile Include="Sys\LogSource.cs" />
-    <Compile Include="Sys\LogType.cs" />
-    <Compile Include="Sys\Role.cs" />
-    <Compile Include="Sys\User.cs" />
-    <Compile Include="Sys\Workflow\Flow.cs" />
-    <Compile Include="Sys\Workflow\FlowInstance.cs" />
-    <Compile Include="Sys\Workflow\FlowNode.cs" />
-    <Compile Include="Sys\Workflow\FlowType.cs" />
+    <Compile Include="Authority\AppMenu.cs" />
+    <Compile Include="Core\ConfigSection.cs" />
+    <Compile Include="Core\Config.cs" />
+    <Compile Include="Authority\DeptRoleMenu.cs" />
+    <Compile Include="Personnel\Dept.cs" />
+    <Compile Include="Core\DicItem.cs" />
+    <Compile Include="Core\DicType.cs" />
+    <Compile Include="Core\Dic.cs" />
+    <Compile Include="Core\Log.cs" />
+    <Compile Include="Authority\LoginSession.cs" />
+    <Compile Include="Core\LogLevel.cs" />
+    <Compile Include="Core\LogSource.cs" />
+    <Compile Include="Core\LogType.cs" />
+    <Compile Include="Authority\Role.cs" />
+    <Compile Include="Personnel\User.cs" />
+    <Compile Include="Workflow\Flow.cs" />
+    <Compile Include="Workflow\FlowInstance.cs" />
+    <Compile Include="Workflow\FlowNode.cs" />
+    <Compile Include="Workflow\FlowType.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
