--- a/ExtApp/ExtApp.Web/Web.config
+++ b/ExtApp/ExtApp.Web/Web.config
@@ -18,6 +18,7 @@
       <property name="connection.provider">NHibernate.Connection.DriverConnectionProvider</property>
       <property name="connection.connection_string">Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ExtApp.mdf;Integrated Security=True;Connect Timeout=30</property>
       <property name="show_sql">true</property>
+      <property name="format_sql">true</property>
       <property name="hbm2ddl.auto">update</property>
       <mapping assembly="ExtApp.Model" />
     </session-factory>
