组织机构管理优化

--- a/ExtApp/ExtApp.Web/ExtApp.Web.csproj
+++ b/ExtApp/ExtApp.Web/ExtApp.Web.csproj
@@ -99,11 +99,12 @@
     <Content Include="app\model\sys\Dic.js" />
     <Content Include="app\model\sys\ConfigSection.js" />
     <Content Include="app\model\sys\Config.js" />
-    <Content Include="app\model\sys\Dept.js" />
+    <Content Include="app\model\personnel\Dept.js" />
     <Content Include="app\model\sys\LogginSession.js" />
     <Content Include="app\model\sys\Log.js" />
     <Content Include="app\model\sys\Role.js" />
     <Content Include="app\plugin\ProgressBarPager.js" />
+    <Content Include="app\store\personnel\DeptTree.js" />
     <Content Include="app\store\sys\ConfigSection.js" />
     <Content Include="app\store\sys\Config.js" />
     <Content Include="app\view\main\desktop\SettingsController.js" />
@@ -119,19 +120,17 @@
     <Content Include="app\view\sys\config\ListController.js" />
     <Content Include="app\widget\SearchForm.js" />
     <Content Include="app\plugin\TabCloseMenu.js" />
-    <Content Include="app\store\sys\Dept.js" />
+    <Content Include="app\store\personnel\Dept.js" />
     <Content Include="app\store\sys\DicItem.js" />
     <Content Include="app\store\sys\Log.js" />
     <Content Include="app\store\sys\Dic.js" />
     <Content Include="app\store\sys\Role.js" />
     <Content Include="app\util\Style.js" />
     <Content Include="app\util\Config.js" />
-    <Content Include="app\view\sys\dept\Add.js" />
-    <Content Include="app\view\sys\dept\AddController.js" />
-    <Content Include="app\view\sys\dept\Edit.js" />
-    <Content Include="app\view\sys\dept\EditController.js" />
-    <Content Include="app\view\sys\dept\List.js" />
-    <Content Include="app\view\sys\dept\ListController.js" />
+    <Content Include="app\view\personnel\dept\Edit.js" />
+    <Content Include="app\view\personnel\dept\EditController.js" />
+    <Content Include="app\view\personnel\dept\List.js" />
+    <Content Include="app\view\personnel\dept\ListController.js" />
     <Content Include="app\view\sys\dic\EditItem.js" />
     <Content Include="app\view\sys\dic\AddItem.js" />
     <Content Include="app\view\sys\dic\EditItemController.js" />
