--- a/ExtApp/ExtApp.Model/packages.config
+++ b/ExtApp/ExtApp.Model/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net452" />
+  <package id="log4net" version="2.0.7" targetFramework="net452" />
   <package id="NHibernate" version="4.1.1.4000" targetFramework="net452" />
   <package id="NHibernate.Mapping.Attributes" version="4.0.0.1" targetFramework="net452" />
+  <package id="Spring.Net" version="1.0.0.0" targetFramework="net452" />
 </packages>
