添加Spring.NET配置文件

--- a/ExtApp/ExtApp.Web/Web.config
+++ b/ExtApp/ExtApp.Web/Web.config
@@ -6,6 +6,9 @@
 <configuration>
   <configSections>
     <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
+    <sectionGroup name="spring">
+      <section name="context" type="Spring.Context.Support.WebContextHandler, Spring.Web"/>
+    </sectionGroup>
   </configSections>
 
   <!-- 应用程序配置 -->
@@ -24,12 +27,27 @@
     </session-factory>
   </hibernate-configuration>
 
+  <!-- Sprint.NET配置 -->
+  <spring>
+    <context>
+      <resource uri="~/ExtApp.AppConfig/BLL.xml"/>
+      <resource uri="~/ExtApp.AppConfig/DAL.xml"/>
+    </context>
+  </spring>
+
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+    <httpHandlers>
+      <add verb="*" path="*.aspx" type="Spring.Web.Support.PageHandlerFactory, Spring.Web"/>
+    </httpHandlers>
+    <httpModules>
+      <add name="Spring" type="Spring.Context.Support.WebSupportModule, Spring.Web"/>
+    </httpModules>
   </system.web>
 
   <system.webServer>
+    <validation validateIntegratedModeConfiguration="false"></validation>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
