--- a/ExtApp/ExtApp.Web/ExtApp.Web.csproj
+++ b/ExtApp/ExtApp.Web/ExtApp.Web.csproj
@@ -127,6 +127,7 @@
     <Content Include="app\view\sys\config\List.js" />
     <Content Include="app\view\sys\config\ListController.js" />
     <Content Include="app\widget\DeptSelect.js" />
+    <Content Include="app\widget\Notify.js" />
     <Content Include="app\widget\SearchForm.js" />
     <Content Include="app\plugin\TabCloseMenu.js" />
     <Content Include="app\store\personnel\Dept.js" />
