--- a/ExtApp/ExtApp.AppBase/ExtApp.AppBase.csproj
+++ b/ExtApp/ExtApp.AppBase/ExtApp.AppBase.csproj
@@ -80,9 +80,9 @@
   <ItemGroup>
     <Compile Include="ApiAuthAttribute.cs" />
     <Compile Include="BaseController.cs" />
-    <Compile Include="CustomBodyAttribute.cs" />
-    <Compile Include="CustomParameterBinding.cs" />
-    <Compile Include="EmptyTask.cs" />
+    <Compile Include="CustomBinding\HttpPostJsonAttribute.cs" />
+    <Compile Include="CustomBinding\HttpJsonBodyBinding.cs" />
+    <Compile Include="CustomBinding\EmptyTask.cs" />
     <Compile Include="JsonResult.cs" />
     <Compile Include="WebApiConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
