--- a/ExtApp/ExtApp.Web/Web.config
+++ b/ExtApp/ExtApp.Web/Web.config
@@ -7,7 +7,9 @@
   <configSections>
     <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
     <sectionGroup name="spring">
-      <section name="context" type="Spring.Context.Support.WebContextHandler, Spring.Web"/>
+      <section name="context" type="Spring.Context.Support.WebContextHandler, Spring.Web" />
+      <section name="objects" type="Spring.Context.Support.DefaultSectionHandler, Spring.Core" />
+      <section name="parsers" type="Spring.Context.Support.NamespaceParsersSectionHandler, Spring.Core" />
     </sectionGroup>
   </configSections>
 
@@ -30,24 +32,24 @@
   <!-- Sprint.NET配置 -->
   <spring>
     <context>
-      <resource uri="~/ExtApp.AppConfig/BLL.xml"/>
-      <resource uri="~/ExtApp.AppConfig/DAL.xml"/>
+      <resource uri="~/ExtApp.AppConfig/BLL.xml" />
+      <resource uri="~/ExtApp.AppConfig/DAL.xml" />
     </context>
   </spring>
 
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
-    <httpHandlers>
-      <add verb="*" path="*.aspx" type="Spring.Web.Support.PageHandlerFactory, Spring.Web"/>
-    </httpHandlers>
     <httpModules>
-      <add name="Spring" type="Spring.Context.Support.WebSupportModule, Spring.Web"/>
+      <add name="Spring" type="Spring.Context.Support.WebSupportModule, Spring.Web" />
     </httpModules>
   </system.web>
 
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false"></validation>
+    <validation validateIntegratedModeConfiguration="false"/>
+    <modules>
+      <add name="Spring" type="Spring.Context.Support.WebSupportModule, Spring.Web"/>
+    </modules>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
@@ -73,6 +75,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Spring.Core" publicKeyToken="65e474d141e25e07" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.1.45000" newVersion="2.0.1.45000" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
