--- a/ExtApp/ExtApp.DAL/packages.config
+++ b/ExtApp/ExtApp.DAL/packages.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Common.Logging" version="3.0.0" targetFramework="net452" />
+  <package id="Common.Logging.Core" version="3.0.0" targetFramework="net452" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net452" />
   <package id="log4net" version="2.0.7" targetFramework="net452" />
   <package id="NHibernate" version="4.1.1.4000" targetFramework="net452" />
   <package id="NHibernate.Mapping.Attributes" version="4.0.0.1" targetFramework="net452" />
+  <package id="Spring.Core" version="2.0.1" targetFramework="net452" />
   <package id="Spring.Net" version="1.0.0.0" targetFramework="net452" />
 </packages>
