--- a/ExtApp/ExtApp.Web/Web.config
+++ b/ExtApp/ExtApp.Web/Web.config
@@ -7,9 +7,8 @@
   <configSections>
     <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
     <sectionGroup name="spring">
-      <section name="context" type="Spring.Context.Support.WebContextHandler, Spring.Web" />
+      <section name="context" type="Spring.Context.Support.ContextHandler, Spring.Core" />
       <section name="objects" type="Spring.Context.Support.DefaultSectionHandler, Spring.Core" />
-      <section name="parsers" type="Spring.Context.Support.NamespaceParsersSectionHandler, Spring.Core" />
     </sectionGroup>
   </configSections>
 
@@ -32,9 +31,13 @@
   <!-- Sprint.NET配置 -->
   <spring>
     <context>
-      <resource uri="~/ExtApp.AppConfig/BLL.xml" />
-      <resource uri="~/ExtApp.AppConfig/DAL.xml" />
+      <resource uri="config://spring/objects" />
+      <resource uri="assembly://ExtApp.AppConfig/ExtApp.AppConfig/BLL.xml" />
+      <resource uri="assembly://ExtApp.AppConfig/ExtApp.AppConfig/DAL.xml" />
     </context>
+    <objects xmlns="http://www.springframework.net">
+      <description>An  example that demonstrates simple IoC features.</description>
+    </objects>
   </spring>
 
   <system.web>
