--- a/ExtApp/ExtApp.BLL/packages.config
+++ b/ExtApp/ExtApp.BLL/packages.config
@@ -16,4 +16,6 @@
   <package id="NHibernate.Mapping.Attributes" version="4.0.0.1" targetFramework="net452" />
   <package id="Spring.Core" version="2.0.1" targetFramework="net452" />
   <package id="Spring.Net" version="1.0.0.0" targetFramework="net452" />
+  <package id="Spring.Web" version="2.0.1" targetFramework="net452" />
+  <package id="Spring.Web.Mvc5" version="2.0.1" targetFramework="net452" />
 </packages>
