--- a/ExtApp/ExtApp.AppBase/packages.config
+++ b/ExtApp/ExtApp.AppBase/packages.config
@@ -5,4 +5,6 @@
   <package id="log4net" version="2.0.7" targetFramework="net452" />
   <package id="Spring.Core" version="2.0.1" targetFramework="net452" />
   <package id="Spring.Net" version="1.0.0.0" targetFramework="net452" />
+  <package id="Spring.Web" version="2.0.1" targetFramework="net452" />
+  <package id="Spring.Web.Mvc5" version="2.0.1" targetFramework="net452" />
 </packages>
