--- a/ExtApp/ExtApp.AppConfig/packages.config
+++ b/ExtApp/ExtApp.AppConfig/packages.config
@@ -3,4 +3,6 @@
   <package id="Common.Logging" version="3.0.0" targetFramework="net452" />
   <package id="Common.Logging.Core" version="3.0.0" targetFramework="net452" />
   <package id="Spring.Core" version="2.0.1" targetFramework="net452" />
+  <package id="Spring.Web" version="2.0.1" targetFramework="net452" />
+  <package id="Spring.Web.Mvc5" version="2.0.1" targetFramework="net452" />
 </packages>
